--- a/FastAQ.Core/appsettings.json
+++ b/FastAQ.Core/appsettings.json
@@ -1,15 +1,14 @@
 {
   "ElasticSearchConfig":{
-    "ConnectionUrl":"http://<ESURL>:9200",
+    "ConnectionUrl":"http://127.0.0.1:9200",
     "Enable":true,
     "httpAuth":{
       "Username":"elastic",
-      "Password":"Elastic_password"
+      "Password":"Elastic_20051027"
     },
     "TimeoutSeconds":10
 
   },
-  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
